# Cambium

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  inference_test.py  parallel_adapter_test.py  pyproject.toml  smoke_test.py  test_custom_blocks_full.py  test_memory_estimation.py  test_staged_trainer_full.py  train_warmup.py  width_expansion_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
cambium/: __init__.py  exceptions.py
cambium/blocks/: __init__.py  base.py  templates.py
cambium/core/: __init__.py  expansion.py  freezing.py  grafting.py  initialization.py
cambium/models/: __init__.py  expandable.py
cambium/strategies/: __init__.py  block_expansion.py  custom_expansion.py  grafted_expansion.py  parallel_adapters.py  width_expansion.py
cambium/training/: __init__.py  data.py  staged_trainer.py  utilities.py
cambium/utils/: __init__.py  memory.py  validation.py
cambium_llm-0.1.0/cambium/strategies/: __init__.py
docs/: api.rst  changelog.rst  concepts.rst  conf.py  custom_blocks.rst  examples.rst  index.rst  installation.rst  memory.rst  quickstart.rst  strategies.rst  training.rst
examples/: 01_quickstart.md  02_interleaved_expansion.md  03_staged_training.md  04_complete_workflow.md  05_width_expansion.md  06_parallel_adapters.md  07_custom_blocks.md  08_grafted_block.md
tests/: __init__.py
tests/integration/: test_integration_custom_blocks.py  test_integration_grafted_block.py  test_integration_grafted_cross_model.py  test_integration_inference.py  test_integration_memory_estimation.py  test_integration_parallel_adapters.py  test_integration_smoke.py  test_integration_staged_trainer.py  test_integration_warmup_training.py  test_integration_width_expansion.py
tests/unit/: test_custom_expansion.py  test_data_loader.py  test_expansion.py  test_freezing.py  test_grafted_expansion.py  test_initialization.py  test_strategies.py
