[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cambium-llm"
version = "0.1.0"
description = "Advanced LLM architecture augmentation library - surgical model expansion with minimal compute"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Sorawit Chokphantavee, Sirawit Chokphantavee, and Cambium Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "transformers", "pytorch", "model expansion", "peft", "fine-tuning"]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black==23.12.1",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
train = [
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "wandb>=0.15.0",
    "bitsandbytes>=0.41.0",
]
all = [
    "cambium-llm[dev,train]",
    "unsloth",
]

[project.urls]
Homepage = "https://github.com/SorawitChok/Cambium"
Repository = "https://github.com/SorawitChok/Cambium"
Documentation = "https://cambium-llm.readthedocs.io"
"Bug Tracker" = "https://github.com/SorawitChok/Cambium/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cambium*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (integration tests)",
    "integration: marks tests as integration tests",
]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} → {new_version}"
tag_message = "{new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"cambium/__init__.py" = ['__version__ = "{version}"']
"docs/conf.py" = ['version = "{version}"', 'release = "{version}"']
